--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -259,7 +259,7 @@ html {
         Main content
 ========================= */
 .app__container {
-    margin-top: var(--header-height);
+    margin-top: calc(var(--header-height) + 20px);
 }
 
 .product-list {
